--- a/CoreSerivce/Web.config
+++ b/CoreSerivce/Web.config
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="MainConnectionString" value="Data Source=192.168.101.11;Initial Catalog=HTVW;Persist Security Info=True;User ID=dbadmin;Password=Presstv@123456"/>
-    <add key="FilesAddress" value="http://192.168.101.11:81/pl/frontend.svc/" />
+    <add key="MainConnectionString" value="Data Source=192.168.100.249\sql2014;Initial Catalog=HTVW;Persist Security Info=True;User ID=dbuser;Password=Presstv@123456"/>
+    <add key="FilesAddress" value="http://192.168.100.249:81/pl/frontend.svc/" />
     <add key="VideoBaseHost" value="http://217.218.67.243/videos/" />
     <add key="ImageBaseHost" value="http://217.218.67.243/images/original/" />
     <add key="ImageSavePath" value="\\192.168.55.177\e$\FILES\Images" />
   </appSettings>
   <system.web>
-    <identity impersonate="true" userName="administrator" password="presstv@123456"/>
+    <!--<identity impersonate="true" userName="admin" password="Hispantv110"/>-->
     <compilation debug="true" targetFramework="4.0" />
     <httpRuntime maxRequestLength="2147483647" executionTimeout="100000" />
     <customErrors mode="Off"/>
