--- a/TCMSFRONTEND/Web.config
+++ b/TCMSFRONTEND/Web.config
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="DbService" value="http://192.168.101.11:81/pl/frontend.svc/"/>
+    <add key="DbService" value="http://192.168.100.249:81/pl/frontend.svc/"/>
     <add key="VideoBaseHost" value=""/>
     <add key="ImageBaseHost" value="http://217.218.67.243/images/thumbnail/"/>
   </appSettings>
   <system.web>
     <compilation targetFramework="4.5" debug="true"/>
     <httpRuntime targetFramework="4.5"/>
-    <customErrors mode="RemoteOnly"/>
+    <customErrors mode="Off"/>
     <webServices>
       <protocols>
         <add name="HttpSoap"/>
