--- a/TCMSFRONTEND/TCMSFRONTEND.csproj
+++ b/TCMSFRONTEND/TCMSFRONTEND.csproj
@@ -44,12 +44,11 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Nustache.Core, Version=1.14.0.4, Culture=neutral, PublicKeyToken=efd6f3d8f76ecd9f, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\nustache-helpers\Nustache\Nustache.Core\bin\Debug\Nustache.Core.dll</HintPath>
+    <Reference Include="Nustache.Core">
+      <HintPath>..\Nustache.Core.dll</HintPath>
     </Reference>
     <Reference Include="NustacheHelpers">
-      <HintPath>..\..\..\nustache-helpers\Blocks.NustacheHelpers\bin\Debug\NustacheHelpers.dll</HintPath>
+      <HintPath>..\NustacheHelpers.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
