* service base address changed

--- a/CoreSerivce/CoreSerivce.csproj
+++ b/CoreSerivce/CoreSerivce.csproj
@@ -213,10 +213,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Files\Images\" />
-    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\101.3.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
