less files updated

--- a/TCMSFRONTEND/Views/Assets/prepros.cfg
+++ b/TCMSFRONTEND/Views/Assets/prepros.cfg
@@ -1028,15 +1028,17 @@
           "output": "css/bootstrap/pagination.css",
           "name": "pagination.less",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "compress": false,
           "sourceMaps": false,
           "strictMath": false,
           "strictUnits": false,
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "f4bead5f"
+          ],
           "type": "less"
         },
         "c0e9b6b7": {
@@ -2200,6 +2202,25 @@
           "optimized": false,
           "height": 539,
           "width": 958
+        },
+        "b1fcc1c8": {
+          "id": "b1fcc1c8",
+          "path": "less/project/responsive.less",
+          "output": "css/project/responsive.css",
+          "name": "responsive.less",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "compress": false,
+          "sourceMaps": false,
+          "strictMath": false,
+          "strictUnits": false,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "0be32fe5"
+          ],
+          "type": "less"
         }
       },
       "deploymentHistory": {},
