--- a/CoreSerivce/Web.config
+++ b/CoreSerivce/Web.config
@@ -3,12 +3,12 @@
   <appSettings>
     <add key="MainConnectionString" value="Data Source=192.168.101.3;Initial Catalog=iran;Persist Security Info=True;User ID=sa;Password=Presstv@123456"/>
     <add key="FilesAddress" value="http://192.168.101.3:81/pl/frontend.svc/" />
-    <add key="VideoBaseHost" value="http://217.218.67.243/videos/" />
-    <add key="ImageBaseHost" value="http://217.218.67.243/images/original/" />
-    <add key="ImageSavePath" value="\\192.168.55.177\e$\FILES\Images" />
+    <add key="VideoBaseHost" value="http://217.218.67.233:82/video/SiteVideo/" />
+    <add key="ImageBaseHost" value="http://93.190.24.9:83/images/original/" />
+    <add key="ImageSavePath" value="\\192.168.101.3\d$\Softwares\Files\Images" />
   </appSettings>
   <system.web>
-    <!--<identity impersonate="true" userName="admin" password="Hispantv110"/>-->
+    <identity impersonate="true" userName="administrator" password="presstv@123456"/>
     <compilation debug="true" targetFramework="4.0" />
     <httpRuntime maxRequestLength="2147483647" executionTimeout="100000" />
     <customErrors mode="Off"/>
