--- a/TCMSFRONTEND/Web.config
+++ b/TCMSFRONTEND/Web.config
@@ -2,8 +2,8 @@
 <configuration>
   <appSettings>
     <add key="DbService" value="http://192.168.101.3:81/pl/frontend.svc/"/>
-    <add key="VideoBaseHost" value=""/>
-    <add key="ImageBaseHost" value="http://217.218.67.243/images/thumbnail/"/>
+    <add key="VideoBaseHost" value="http://217.218.67.233:82/video/SiteVideo/"/>
+    <add key="ImageBaseHost" value="http://93.190.24.9:83/images/thumbnail/"/>
   </appSettings>
   <system.web>
     <compilation targetFramework="4.5" debug="true"/>
