--- a/TCMSFRONTEND/Views/Assets/prepros.cfg
+++ b/TCMSFRONTEND/Views/Assets/prepros.cfg
@@ -60,7 +60,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "d73b3391": {
           "id": "d73b3391",
@@ -75,7 +76,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "8a2f82f5": {
           "id": "8a2f82f5",
@@ -90,7 +92,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "f34c86af": {
           "id": "f34c86af",
@@ -105,7 +108,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "7842f6e1": {
           "id": "7842f6e1",
@@ -120,7 +124,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "50ef0fa9": {
           "id": "50ef0fa9",
@@ -135,7 +140,8 @@
           "customOutput": true,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "da9b571e": {
           "id": "da9b571e",
@@ -150,7 +156,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "308e9495": {
           "id": "308e9495",
@@ -165,7 +172,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "fdf68049": {
           "id": "fdf68049",
@@ -180,7 +188,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "fa772353": {
           "id": "fa772353",
@@ -195,7 +204,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "85db2cff": {
           "id": "85db2cff",
@@ -210,7 +220,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "09a1e8e1": {
           "id": "09a1e8e1",
@@ -225,7 +236,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "27eabde6": {
           "id": "27eabde6",
@@ -240,7 +252,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "bb53beb9": {
           "id": "bb53beb9",
@@ -1037,7 +1050,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "f4bead5f"
+            "f4bead5f",
+            "bb53beb9"
           ],
           "type": "less"
         },
@@ -2218,7 +2232,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "0be32fe5"
+            "0be32fe5",
+            "bb53beb9"
           ],
           "type": "less"
         }
@@ -2240,7 +2255,8 @@
           "mouseSync": true,
           "scrollSync": true,
           "keyboardSync": true,
-          "animateCss": true
+          "animateCss": true,
+          "enabled": false
         },
         "deployment": {
           "ftpHost": "",
@@ -2349,7 +2365,8 @@
             "autoCompile": false,
             "uglify": true,
             "mangle": true,
-            "sourceMaps": false
+            "sourceMaps": false,
+            "babel": false
           },
           "jade": {
             "autoCompile": true,
@@ -2361,7 +2378,8 @@
             "doubleQuotes": false
           },
           "kit": {
-            "autoCompile": true
+            "autoCompile": true,
+            "minifyHtml": false
           },
           "slim": {
             "autoCompile": true,
