--- a/TCMSFRONTEND/TCMSFRONTEND.csproj
+++ b/TCMSFRONTEND/TCMSFRONTEND.csproj
@@ -234,6 +234,7 @@
     <Content Include="Views\Assets\player\six.xml" />
     <Content Include="Views\Assets\player\swfobject.js" />
     <Content Include="Views\Assets\player\_player.swf" />
+    <Content Include="Views\Modules\ContentsList\ItemTiles.html" />
     <Content Include="Views\Modules\ContentsList\Tiles.html" />
     <Content Include="Views\Modules\ContentsList\TilesGalleries.html" />
     <Content Include="Views\Modules\ContentsList\Topnews.html" />
