--- a/TCMSFRONTEND/Views/Assets/prepros.cfg
+++ b/TCMSFRONTEND/Views/Assets/prepros.cfg
@@ -2236,6 +2236,22 @@
             "bb53beb9"
           ],
           "type": "less"
+        },
+        "ecee72c8": {
+          "id": "ecee72c8",
+          "path": "js/playback.js",
+          "output": "js/playback-dist.js",
+          "name": "playback.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "babel": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
