Resoinsive Bugfixes and menu changes

--- a/TCMSFRONTEND/Views/Assets/prepros.cfg
+++ b/TCMSFRONTEND/Views/Assets/prepros.cfg
@@ -761,15 +761,17 @@
           "output": "css/bootstrap/dropdowns.css",
           "name": "dropdowns.less",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "compress": false,
           "sourceMaps": false,
           "strictMath": false,
           "strictUnits": false,
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "f4bead5f"
+          ],
           "type": "less"
         },
         "d8066a69": {
@@ -2451,7 +2453,13 @@
               "comments": false,
               "preserve_line": false,
               "screw_ie8": false,
-              "preamble": null
+              "preamble": null,
+              "indent_start": 0,
+              "indent_level": 4,
+              "width": 80,
+              "max_line_len": 32000,
+              "source_map": null,
+              "quote_style": 0
             }
           }
         }
